Fix: increase z-index of search strings

--- a/styles/app.css
+++ b/styles/app.css
@@ -216,6 +216,7 @@ main {
   border-radius: 0 0 0.5rem 0.5rem;
 
   background: var(--grey);
+  z-index: 2;
 }
 
 .search__strings::-webkit-scrollbar {
